# Symulacja

./: .dockerignore  .env.example  .env.production.example  .env.staging.example  .gitignore  .trufflehog.yaml  ANSWER.md  API_INSTRUKCJA.md  BIZNES.md  CHANGES.md  CLAUDE.md  COMPLETE_GUIDE.md  DEMO_DATA_INFO.md  DEPLOY.md  DIAGNOSIS.md  Dockerfile  Dockerfile.cloudrun  Dockerfile.test  FRONTEND_IMPROVEMENTS_P2.md  GEMINI.md  IMPLEMENTATION_PLAN_AUTH_SETTINGS.md  IMPLEMENTATION_PROGRESS.md  IMPROVEMENTS.md  INSTRUKCJA_PL.md  MARKDOWN_RENDERING_COMPLETE.md  Makefile  ORCHESTRATION_COMPLETE.md  PLAN.MD  PLAN.md  QUALITY_ASSESSMENT_PRODUCTION_ISSUES.md  README.md  REFACTOR.md  SECURITY_AUDIT_REPORT.md  STATISTICAL_VALIDITY.md  STUDY_DESIGNER_SUMMARY.md  SURVEY_DIVERSITY_IMPROVEMENTS.md  SURVEY_DIVERSITY_TEST_RESULTS.md  TEST_COVERAGE_ANALYSIS.md  alembic.ini  check_unused_ui.sh  (+16 more)
.github/: db_diagnostic_20251113_diagnostics.txt
.venv311/: pyvenv.cfg
alembic/: env.py
app/: __init__.py  main.py  types.py
config/: PROMPTS_INDEX.md  README.md  __init__.py  app.yaml  app_loader.py  demographics_loader.py  features.yaml  features_loader.py  loader.py  logging.yaml  models.yaml  pricing.yaml  providers.yaml  stopwords_loader.py  validators.py
docs/: AI_ML.md  BACKEND.md  BIZNES.md  BIZNES_v2.1_BACKUP.md  CODE_DUPLICATION_ANALYSIS.md  DEPENDENCIES_AUDIT.md  DEPLOYMENT.md  DEPLOYMENT_CLOUD_RUN.md  DEVOPS.md  DOCKER.md  GRAPH_RAG.md  INFRASTRUCTURE.md  INFRASTRUKTURA.md  MULTI_LLM_GUIDE.md  ORCHESTRATION.md  ORCHESTRATION_STATUS.md  PERFORMANCE_INDEXES_ANALYSIS.md  PERSONA_DETAILS.md  PERSONA_DETAILS_DATA_AUDIT.md  PLAN.md  QA.md  QUICKSTART.md  QUICK_START_ORCHESTRATION.md  (+9 more)
(+1166 files in other folders)
