[project]
name = "sight"
version = "1.0.0"
description = "AI-powered virtual focus group platform"

[project.optional-dependencies]
# Multi-provider LLM support (OpenAI, Anthropic)
# Install with: pip install -e ".[llm-providers]"
llm-providers = [
    "langchain-openai>=0.2.0,<0.3.0",
    "langchain-anthropic>=0.2.0,<0.3.0",
    "openai",
    "anthropic",
    "tiktoken>=0.5.0",  # OpenAI tokenizer
]

# Document processing for RAG (PDF, DOCX upload feature)
# Install with: pip install -e ".[document-processing]"
document-processing = [
    "pypdf",
    "python-docx",
]

# Experimental dependencies (currently unused, may be needed in future)
# Install with: pip install -e ".[experimental]"
experimental = [
    "websockets>=12.0",
    "tenacity>=8.0.0",
    "pandas>=2.0.0",
]

# All optional dependencies
# Install with: pip install -e ".[all]"
all = [
    "sight[llm-providers]",
    "sight[document-processing]",
    "sight[experimental]",
]

[tool.ruff]
line-length = 240
target-version = "py311"

[tool.ruff.lint]
extend-ignore = [
    "B008",    # FastAPI dependency injection patterns
    "B904",    # HTTPException chaining noise
    "ERA001",  # Allow temporary commented code blocks
    "PLR0911", # Complex control flow in async handlers
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004", # Domain-specific magic numbers
    "PLR5501",
    "PLR1711",
    "PLW0603",
    "PLC0415",
    "RET503",
    "RET504",
    "RET505",
    "SIM103",
    "SIM102",
    "SIM114",
    "SIM115",
    "SIM118",
    "ARG001",
    "ARG002",
    "C420",
    "DTZ003",
]
